force-app/main/default/objects/PSEADashboardCarouselItem__c/PSEADashboardCarouselItem__c.object-meta.xml
<CustomObject>
    <label>PSEADashboardCarouselItem</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>PSEADashboardCarouselItem ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSEADashboardCarouselItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>