force-app/main/default/objects/PSEADashboardCarouselItem__c/fields/Dashboard_Label__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Label__c</fullName>
    <label>Dashboard Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>