force-app/main/default/objects/PSEADashboardCarouselItem__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>JSON Filter</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>