force-app/main/default/objects/PSEADashboardCarouselItem__c/fields/Page_ID__c.field-meta.xml
<CustomField>
    <fullName>Page_ID__c</fullName>
    <label>Page ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>