force-app/main/default/objects/PSEADashboardCarouselItem__c/fields/Page_Label__c.field-meta.xml
<CustomField>
    <fullName>Page_Label__c</fullName>
    <label>Page Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>