force-app/main/default/objects/PSEADashboardCarouselItem__c/fields/PSEADashboardCarousel__c.field-meta.xml
<CustomField>
    <fullName>PSEADashboardCarousel__c</fullName>
    <label>PSEADashboardCarousel</label>
    <referenceTo>PSEADashboardCarousel__c</referenceTo>
    <relationshipLabel>PSEADashboardCarouselItem</relationshipLabel>
    <relationshipName>PSEADashboardCarouselItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>